# pv-modelling-mirror

./: README.md  generate_pvwatts_data.ipynb  generate_pvwatts_data_monthly.ipynb  predict-irradiance.ipynb  process_pvwatts_data.ipynb  process_pvwatts_data_hourly.ipynb  process_pvwatts_data_monthly.ipynb  pyproject.toml  streamlit_app.py
data/: 2565356_1.34_103.71_2017.csv  2577030_1.34_103.79_2018.csv  2577030_1.34_103.79_2019.csv  2577030_1.34_103.79_2020.csv  sg_2018.csv  sg_2019.csv  sg_2020.csv  sg_west_2016.csv  sg_west_2017.csv
data/Japan/: SolarEdge Japan Tochigi Power.csv
data/irradiance/: 2565356_1.34_103.71_2016.csv  2565356_1.34_103.71_2018.csv  2565356_1.34_103.71_2019.csv  2565356_1.34_103.71_2020.csv
data/pvwatts/: 1year.json  5years_baseline.csv  5years_forward_monthly_100kWh_baseline.csv  system_capacity10_module_type0_array_type0_tilt10.json  system_capacity10_module_type0_array_type0_tilt15.json  system_capacity10_module_type0_array_type0_tilt30.json  system_capacity10_module_type0_array_type0_tilt5.json  system_capacity10_module_type0_array_type1_tilt10.json  system_capacity10_module_type0_array_type1_tilt15.json  system_capacity10_module_type0_array_type1_tilt30.json  system_capacity10_module_type0_array_type1_tilt5.json  system_capacity10_module_type1_array_type0_tilt10.json  system_capacity10_module_type1_array_type0_tilt15.json  (+230 more)
models/: fft.pkl
notebooks/: classify_degradation.ipynb  generate_pvwatts_data_monthly_Japan.ipynb  process_pvwatts_data_monthly.ipynb
pv-prediction/: generate_pvwatts_data.py
(+2640 files in other folders)
