[tool.poetry]
name = "pv-prediction"
version = "0.1.0"
description = ""
authors = ["yutian"]
readme = "README.md"
packages = [{include = "pv_prediction"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
