[tool.poetry]
name = "pv-prediction"
version = "0.1.0"
description = ""
authors = ["yutian"]
readme = "README.md"
packages = [{include = "pv_prediction"}]

[tool.poetry.dependencies]
python = "^3.10"
darts = "^0.24.0"
streamlit = "^1.21.0"
altair = "^4.2.2"
requests = "^2.28.2"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
